build_error_2.txt
    Checking sonilivetext v0.1.0 (C:\Users\mark\Documents\Projektek\HUN-REN\Soniox\SoniLiveText)
error[E0061]: this method takes 3 arguments but 2 arguments were supplied
   --> src\gui\draw.rs:101:21
    |
101 |             painter.galley(pos + offset, shadow_galley.clone());
    |                     ^^^^^^------------------------------------- argument #3 of type `Color32` is missing
    |
note: method defined here
   --> C:\Users\mark\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.33.3\src\painter.rs:570:12
    |
570 |     pub fn galley(&self, pos: Pos2, galley: Arc<Galley>, fallback_color: Color32) {
    |            ^^^^^^
help: provide the argument
    |
101 |             painter.galley(pos + offset, shadow_galley.clone(), /* Color32 */);
    |                                                               +++++++++++++++

error[E0061]: this method takes 3 arguments but 2 arguments were supplied
   --> src\gui\draw.rs:105:17
    |
105 |         painter.galley(pos, galley);
    |                 ^^^^^^------------- argument #3 of type `Color32` is missing
    |
note: method defined here
   --> C:\Users\mark\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.33.3\src\painter.rs:570:12
    |
570 |     pub fn galley(&self, pos: Pos2, galley: Arc<Galley>, fallback_color: Color32) {
    |            ^^^^^^
help: provide the argument
    |
105 |         painter.galley(pos, galley, /* Color32 */);
    |                                   +++++++++++++++

For more information about this error, try `rustc --explain E0061`.
error: could not compile `sonilivetext` (lib) due to 2 previous errors
